<resources>
    <string name="app_name">Parachute</string>
    <string name="platform_name">Android</string>
    <string name="action_settings">Settings</string>
    <string name="action_register">Register</string>
    <string name="dialog_loading_title">Loading...</string>
    <string name="dialog_loading_message">Connecting to server</string>
    <string name="steak_apiary_end_point">http://private-87f66-steak.apiary-mock.com/</string>
    <string name="steak_api_param_filter_enquiries">enquiries</string>
    <string name="steak_api_param_filter_all">all</string>
    <string name="steak_api_param_league_info_true">true</string>
    <string name="landing_page_slider_text1">Search for your local sports\nleagues</string>
    <string name="landing_page_slider_text2">Join a sports league that\nsuits you</string>
    <string name="landing_page_slider_text3">Stay fit and have fun in your\nnew league</string>
    <string name="landing_page_text1">FIND A SPORTS LEAGUE NEAR ME</string>
    <string name="landing_page_text2">Login</string>
    <string name="landing_page_terms_text_1">By using Mitoo, you agree to</string>
    <string name="landing_page_terms_text_2">"our "</string>
    <string name="landing_page_terms_text_3">"<u>Terms</u>"</string>
    <string name="landing_page_terms_text_4">" and "</string>
    <string name="landing_page_terms_text_5">"<u>Privacy Policy</u>"</string>
    <string name="login_page_title">Login</string>
    <string name="login_page_text1">FACEBOOK LOGIN</string>
    <string name="login_page_text2">Or</string>
    <string name="login_page_text3">Email or phone number</string>
    <string name="login_page_text4">Password</string>
    <string name="login_page_text5">Forgot?</string>
    <string name="login_page_text6">LOGIN</string>
    <string name="pre_login_page_dialog_title">"That email/phone doesn't exist on Mitoo"</string>
    <string name="pre_login_page_dialog_message">"Try a different email, phone or check the spelling"</string>
    <string name="pre_confirm_page_text1">"Check your "</string>
    <string name="pre_confirm_page_text2">"Hi "</string>
    <string name="pre_confirm_page_text3">" you'll receive an "</string>
    <string name="pre_confirm_page_text4">" to confirm your account, just click the link to login."</string>
    <string name="pre_confirm_page_text5">RESEND</string>
    <string name="pre_confirm_page_text6">email</string>
    <string name="pre_confirm_page_text7">"text"</string>
    <string name="pre_confirm_alert_success_title">Invite resent</string>
    <string name="pre_confirm_alert_success_message">"We've sent another invite, this can take up to 10 minutes."</string>
    <string name="pre_confirm_alert_failure_title">Fail to resend invitation</string>
    <string name="pre_confirm_alert_failure_message">Already confirmed</string>
    <string name="join_page_title">Join</string>
    <string name="join_page_button_1_text">CONNECT WITH FACEBOOK</string>
    <string name="join_page_text2">Name</string>
    <string name="join_page_text3">Email</string>
    <string name="join_page_text4">Phone</string>
    <string name="join_page_text5">Set a Mitoo password</string>
    <string name="join_page_button_2_text">I\'M INTERESTED</string>
    <string name="join_page_text6">SUCCESS</string>
    <string name="join_page_text7">We\'ve sent your details to the league, they\nshould be in touch soon.</string>
    <string name="join_page_info_prefix">We will send your details to</string>
    <string name="join_page_info_suffix">so you can join.</string>
    <string name="join_page_button_3_text">VIEW MY LEAGUES</string>
    <string name="forgot_page_title">Reset Password</string>
    <string name="forgot_page_text1">Enter your email</string>
    <string name="forgot_page_text2">RESET</string>
    <string name="competition_page_text1">SELECT SPORT</string>
    <string name="search_page_text_1">Search Mitoo for:</string>
    <string name="search_page_text_2">SUGGESTIONS</string>
    <string name="search_page_text_3">Search for a league name or sport</string>
    <string name="search_page_text_4">Current Location</string>
    <string name="location_search_page_text_1">Enter any location</string>
    <string name="location_search_page_text_2">Current Location</string>
    <string name="results_page_text_1">Sorry we don\'t have any results \nfor</string>
    <string name="results_page_text_2">in your area yet</string>
    <string name="settings_page_text_1">Help and Feedback</string>
    <string name="settings_page_text_2">Log Out</string>
    <string name="league_page_subtitle_1">DETAILS</string>
    <string name="league_page_subtitle_2">WANT TO JOIN?</string>
    <string name="league_page_subtitle_3">LOCATION</string>
    <string name="league_page_text_1">This competition is for any kind of player, \n we\'ll train and  evaluate you before sending you \n to a competition...</string>
    <string name="league_page_text_2">We\'ve sent your details to the league, they \nshould be in touch very soon.</string>
    <string name="league_page_text_3">Read more</string>
    <string name="league_page_button_text">I\'M INTERESTED</string>
    <string name="league_page_button_disabled_text">DETAILS SENT</string>
    <string name="home_page_text_1">Pending</string>
    <string name="home_page_text_2">Find a new league</string>
    <string name="home_page_text_3">You haven\'t joined any leagues yet. To find a new league \nto join, tap search at the top.</string>
    <string name="home_page_text_4">These leagues should be in touch soon</string>
    <string name="home_page_text_5">My Leagues</string>
    <string name="home_page_text_6">Once you are in a league it will show here</string>
    <string name="home_page_enquired_date_prefix">Enquired on </string>
    <string name="settings_page_bottom_text_1">Sign out of Mitoo</string>
    <string name="settings_page_top_text_1">Get help</string>
    <string name="settings_page_top_text_2">Feedback</string>
    <string name="settings_page_top_text_3">FAQ</string>
    <string name="settings_page_top_text_4">About</string>
    <string-array name="settings_top_menu_list">
        <item>Get help</item>
        <item>Feedback</item>
        <item>FAQ</item>
        <item>About Mitoo</item>
    </string-array>
    <string-array name="user_profile_details_list">
        <item>Name</item>
        <item>Email</item>
        <item>Phone</item>
        <item>Password</item>
    </string-array>
    <string name="error_401_incorrect_cred">Incorrect credentials, please try again</string>
    <string name="error_404">The information you are trying to find can not be found</string>
    <string name="error_409">We already have an account with that email. Please login to continue.</string>
    <string name="error_422">We already have an account with that email. Please login to continue.</string>
    <string name="error_500">It looks like we are having some technical difficulties. We are looking into it now.</string>
    <string name="error_time_out">Connection timed out, please try again</string>
    <string name="error_no_internet">Unable to connect to Mitoo. Check your connection and try again.</string>
    <string name="error_incorrect_email_password_combo">We’re sorry but that was a miss. Please check your details and try again.</string>
    <string name="error_user_not_confirmed">Please confirm your email/phone before logging in</string>
    <string name="error_bad_email_prefix">No account exists for\n</string>
    <string name="error_bad_email_suffix">.\nPlease check it and try again.</string>
    <string name="error_409_already_confirmed">Already confirmed</string>
    <string name="error_401_token_invalid">Token invalid, contact Mitoo if you like</string>
    <string name="empty"></string>
    <string name="bullet">\u2022</string>
    <string name="northAmericaAreaCode">+1</string>
    <string name="hint_search">Search</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_phone">Phone</string>
    <string name="toast_error">An error has occurred</string>
    <string name="toast_loading">Loading...</string>
    <string name="toast_finish_loading">Loading Complete</string>
    <string name="toast_authorization_token">Authorization Token Is</string>
    <string name="toast_logging_in">Logging in</string>
    <string name="toast_login_success">Log in success</string>
    <string name="toast_signing_up">Signing up</string>
    <string name="toast_sign_up_success">Sign up success</string>
    <string name="toast_server_error">Something Went Wrong. please let us know at help@mitoo.co</string>
    <string name="toast_password_reset">Password request successfully sent, please check your email</string>
    <string name="toast_name_required">Name is required</string>
    <string name="toast_email_required">Email is required</string>
    <string name="toast_password_required">Password is required</string>
    <string name="toast_phone_required">Phone number is required</string>
    <string name="toast_identifier_required">An email or phone number is required</string>
    <string name="toast_invalid_credentials">We can\'t find your email in our system. Please check your email and try again.</string>
    <string name="toast_invalid_email">Please enter a valid email</string>
    <string name="toast_invalid_password">Please enter a valid password</string>
    <string name="toast_invalid_name">Please enter a valid name</string>
    <string name="toast_invalid_phone">Please enter your phone number including the area code</string>
    <string name="toast_email_length_too_short">Email must have at least 5 characters</string>
    <string name="toast_password_length_too_short">Password must have at least 8 characters</string>
    <string name="toast_name_length_too_short">Name must have at least 3 characters</string>
    <string name="toast_phone_length_too_short">Phone number must have at least 10 digits</string>
    <string name="toast_email_length_too_long">Email cannot be more than 100 characters</string>
    <string name="toast_password_length_too_long">Password cannot be more than 100 characters</string>
    <string name="toast_name_length_too_long">Name cannot be more than 100 characters</string>
    <string name="toast_phone_length_too_long">Phone number cannot be more than 11 digits</string>
    <string name="toast_invalid_input">Input is invalid</string>
    <string name="toast_missing_location">Please enter a location</string>
    <string name="prompt_location_services_title">Location Services</string>
    <string name="prompt_location_services_message">Please turn on location services</string>
    <string name="prompt_confirm_409_title">Already Confirmed</string>
    <string name="prompt_confirm_409_Message">Your account has been confirmed.</string>
    <string name="prompt_confirm_401_title">Link Expired</string>
    <string name="place_holder_started_on">Started on </string>
    <string name="place_holder_date">11/21/2014</string>
    <string name="place_holder_location">CORNHOLE</string>
    <string name="place_holder_day">Friday</string>
    <string name="place_holder_level">CO-ED</string>
    <string name="location_screen_text_two">San Francisco</string>
    <string name="location_screen_text_three">" California"</string>
    <string name="location_screen_text_four">200 connections"</string>
    <string name="location_screen_text_eight">Hong Kong</string>
    <string name="result_screen_text_three">International</string>
    <string name="result_screen_text_four">Tourism</string>
    <string name="result_screen_text_five">Technology</string>
    <string name="result_screen_text_six">Finance</string>
    <string name="result_screen_text_seven">My network</string>
    <string name="network_screen_text_one">Friends</string>
    <string name="network_screen_text_two">Interests</string>
    <string name="network_screen_text_three">Needs</string>
</resources>