<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="wrap_content"
    android:layout_height="@dimen/landing_page_privacy_terms_view_height">

    <TextView
        android:id="@+id/topStaticTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_page_terms_text_1"
        android:layout_alignParentTop="true"
        android:layout_marginTop="@dimen/landing_page_privacy_top_padding"
        style="@style/landingTermsPrivacyGrayText"
        />

    <TextView
        android:id="@+id/leftStaticTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_page_terms_text_2"
        android:layout_below="@id/topStaticTextView"
        style="@style/landingTermsPrivacyGrayText"
        />

    <TextView
        android:id="@+id/termsTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_page_terms_text_3"
        android:layout_below="@id/topStaticTextView"
        android:layout_toRightOf="@id/leftStaticTextView"
        style="@style/landingTermsPrivacyWhiteText"
        />
    <TextView
        android:id="@+id/middleStaticTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_page_terms_text_4"
        android:layout_below="@id/topStaticTextView"
        android:layout_toRightOf="@id/termsTextView"
        style="@style/landingTermsPrivacyGrayText"
        />

    <TextView
        android:id="@+id/privacyTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/landing_page_terms_text_5"
        android:layout_below="@id/topStaticTextView"
        android:layout_toRightOf="@id/middleStaticTextView"
        android:layout_marginBottom="@dimen/landing_page_privacy_bottom_padding"
        style="@style/landingTermsPrivacyWhiteText"
        />
</RelativeLayout>