<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <TextView
        android:id="@+id/distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/place_holder_started_on"
        android:layout_alignParentLeft="true"
        android:textIsSelectable="false"
        style="@style/blueBorderedSmallText"
        />

    <TextView
        android:id="@+id/price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/place_holder_date"
        android:layout_toRightOf="@id/distance"
        android:layout_marginLeft="@dimen/spacing_tiny"
        android:textIsSelectable="false"
        style="@style/greenBorderedSmallText"
        />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/place_holder_location"
        android:layout_toRightOf="@id/price"
        android:layout_marginLeft="@dimen/spacing_tiny"
        android:textIsSelectable="false"
        style="@style/grayLightBorderedSmallText"
        />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/place_holder_day"
        android:layout_toRightOf="@id/location"
        android:layout_marginLeft="@dimen/spacing_tiny"
        android:textIsSelectable="false"
        style="@style/grayLightBorderedSmallText"
        />

    <TextView
        android:id="@+id/level"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/place_holder_level"
        android:layout_toRightOf="@id/day"
        android:layout_marginLeft="@dimen/spacing_tiny"
        android:textIsSelectable="false"
        style="@style/grayLightBorderedSmallText"
        />

</RelativeLayout>
