<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_network"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <RelativeLayout
        android:id="@+id/topLine"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:background="@color/blue"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/firstRowText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:textSize="15sp"
            android:textColor="@color/white"
            android:text="@string/location_screen_text_two" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/firstRowText"
            android:textColor="@color/white"

            android:textSize="15sp"
            android:text="@string/location_screen_text_three" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:textColor="@color/white"
            android:textSize="15sp"
            android:text="@string/location_screen_text_four" />

    </RelativeLayout>

    <RelativeLayout
            android:id="@+id/topContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/topLine"
            android:layout_centerHorizontal="true"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/firstIconImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/untitled3_18" />

            <TextView
                android:id="@+id/firstTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/firstIconImage"
                android:text="@string/network_screen_text_one"
                android:textSize="20sp" />

            <ImageView
                android:id="@+id/secondIconImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_big"
                android:layout_toRightOf="@id/firstTextView"
                android:src="@drawable/untitled3_19" />

            <TextView
                android:id="@+id/secondTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/secondIconImage"
                android:text="@string/network_screen_text_two"
                android:textSize="20sp" />


            <ImageView
                android:id="@+id/thirdIconImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/spacing_big"
                android:layout_toRightOf="@id/secondTextView"
                android:src="@drawable/untitled3_20" />

            <TextView
                android:id="@+id/thirdTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toRightOf="@id/thirdIconImage"
                android:text="@string/network_screen_text_three"
                android:textSize="20sp" />


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/staticLine"
        android:layout_width="90dp"
        android:layout_height="5dp"
        android:layout_below="@id/topContainer"
        android:background="@color/green"
        android:orientation="horizontal"/>


    <ListView
        android:id="@+id/networkListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:divider="@color/blue"
        android:layout_below="@id/staticLine">

    </ListView>

</RelativeLayout>