<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_reset_password"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg1" >

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <TextView
            android:id="@+id/forgotPageTitleText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgot_page_title"
            android:layout_centerHorizontal="true"
            android:textStyle="bold"
            android:layout_marginBottom="@dimen/spacing_normal" 
            style="@style/whiteBigText"/>

        <EditText
            android:id="@+id/emailInput"
            android:layout_width="@dimen/gray_button_width"
            android:layout_height="@dimen/gray_button_height"
            android:hint="@string/forgot_page_text1"
            android:layout_below="@+id/forgotPageTitleText"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/spacing_smallest"
            style="@style/whiteEditText"
            />

        <Button
            android:id="@+id/resetButton"
            android:layout_width="@dimen/gray_button_width"
            android:layout_height="@dimen/gray_button_height"
            android:layout_below="@+id/emailInput"
            android:layout_centerHorizontal="true"
            android:text="@string/forgot_page_text2"
            style="@style/darkGrayButton"
            />

    </RelativeLayout>

</RelativeLayout>
